fix img-table spacing

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -43,6 +43,7 @@ $midpurple: #BDADDA;
 $lightpurple: #F2EFF7;
 $blue: #7FACC5;
 $green: #7FC598;
+$pink: #CA8BB4;
 $grey: #4A4A4A;
 $midgrey: #999999;
 $lightgrey: #CECECE;
