--- a/css/styles.scss
+++ b/css/styles.scss
@@ -552,7 +552,8 @@ img.smaller {
 	}
 }
 .wide100 {
-	margin: 1rem 0;
+	margin-left: 1rem;
+	margin-right: 1rem;
 }
 .narrow {
 	width: 80%;
